--- a/BMI Calculator/BMI Calculator/Base.lproj/Main.storyboard
+++ b/BMI Calculator/BMI Calculator/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Preferences View Controller-->
         <scene sceneID="HcD-YB-fVQ">
             <objects>
-                <viewController id="bSy-M6-eH5" sceneMemberID="viewController">
+                <viewController id="bSy-M6-eH5" customClass="PreferencesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gcg-Gi-zga">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
